feat (file basic operation)
1. finish the file upload / download / search / delete / get APIs.
